--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "main": "index.js",
   "scripts": {
-    "start": "servor --reload"
+    "start": "node app_/index.js"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "formidable": "^3.5.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "servor": "^4.0.2"
   },
   "devDependencies": {
