--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
-    "servor": "^4.0.2"
+    "nodemailer": "^6.9.11",
+    "servor": "^4.0.2",
+    "twilio": "^4.23.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
