--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "nodemailer": "^6.9.11",
+    "request-ip": "^3.3.0",
     "servor": "^4.0.2",
     "twilio": "^4.23.0"
   },
